# PearsonLab_AUTO_image_analysis_pipelines.

./: .gitignore  README.md  cbf_analysis.py  config.example.yaml  environment.yml  pyproject.toml  requirements.txt  run_cbf.py
docs/: DEPLOYMENT.md  FIJI_PREP.md  FIJI_ZAXIS_EXPORT.md  LAB_STANDARDS.md  MASTER_GUIDE.md  MASTER_GUIDE_DEVELOPER.md  PAPER_COMPLIANCE.md
pearson_cbf/: __about__.py  __init__.py  __main__.py  cli.py  config.py  genotype.py  io_loaders.py  models.py  pipeline.py  plots.py  roi_select.py  roi_store.py  signal_fft.py  statistics.py
scripts/: setup_conda.ps1
